# ai-agent-workshop

./: .gitignore  .gitmodules  .run-pids  Makefile  README.md  package-lock.json
.github/workflows/: ci.yml
a2cal/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
a2cal/.github/workflows/: ci.yml
a2cal/docs/: architecture.md
a2cal/src/: .gitignore  .server_state.json  main.py  main_simple.py
a2cal/src/.streamlit/: config.toml
a2cal/src/a2a_client/: __init__.py  booking_automation.py  client.py
a2cal/src/agent_cards/: calendar_admin.json  calendar_booking.json
a2cal/src/agents/: calendar_admin_agent.py  calendar_booking_agent.py  server.py
a2cal/src/app/: ui.py
a2cal/src/common/: agent_did.txt  agent_executor.py  base_agent.py  prompts.py  server.py  server_state.py  utils.py  workflow.py
a2cal/src/mmcp/: client.py  server.py  tools.py
a2cal/src/services/calendar-service/: __init__.py  calendar_api.py  db_adapter.py
agentic-match/: README.md  main.py  match-prompt.md
agentic-match/data/sponsor-synergies/: asana.com.md  candid.org.md  craignewmarkphilanthropies.org.md  engagebeast.ai.md
allycat/: README.md
day1/: README.md
day2/: .run-pids
day2/session-2/: .gitignore  Makefile  README.md  package-lock.json
day2/session-2/a2cal/: .env.example  README.md  __init__.py  requirements.txt
day2/session-2/calendar-agent/: .env.example  .gitignore  README.md  SCRIPT.md  a2a-server.py  a2a.py  a2a_server.py  agent.py  agent_did.txt  agentfacts.json  agentfacts.jsonschema  agentfacts.py  calendar.py  calendar_module.py  db_adapter.py  did_documents.json  main.py  pyproject.toml  requirements.txt  server.py  ui.py
day2/session-2/mcp-calendar-service/: agent.py  calendar.json  did_peer2.py  main.py  pyproject.toml
harvest-ai-alliance-members/: README.md  main.py  summarize-prompt.md
harvest-ai-alliance-members/data/: aia-members.html  page-urls.csv
harvest-ai-alliance-network/: main.py  mcp-query.py  pyproject.toml
harvest-ai-alliance-network/data/: member-urls.txt  sponsor-urls.txt
mcp-calendar-service/: README.md  pyproject.toml  start-mcp-inspector.sh
submodules/: .run-pids
(+112 files in other folders)
