[project]
name = "calendar-agent"
version = "0.1.0"
description = "Calendar Agent with MCP Server for booking and scheduling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-calendar>=0.1.7",
    "pydantic>=2.0.0",
    "fastmcp>=0.9.0",
    "a2a-sdk[http-server]>=0.1.0",
    "base58>=2.1.1",
    "cryptography>=42.0.0",
    "pyngrok>=7.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
]

[project.scripts]
calendar-agent = "main:main"

[tool.uv]
dev-dependencies = []

