[project]
name = "mcp-calendar-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "openai>=2.6.1",
    "starlette>=0.37.2",
    "a2a-sdk[http-server]",
    "base58>=2.1.1",
    "cryptography>=42.0.0",
    "pyngrok>=7.0.0",
]
